--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,19 @@
 
+@font-face {
+    font-family: gotham-light;
+    src: url(./Gotham-Font/Gotham-Light.otf) url(./Gotham-Font/GothamLight.ttf);
+}
+
+@font-face {
+    font-family: gotham-black;
+    src: url(./Gotham-Font/Gotham-Black.otf) url(./Gotham-Font/GothamBold.ttf);
+}
+
 body {
-    display: inline;
-    max-width: 1000px;
     margin: auto;
     color: white;
     background-color: rgb(216,192,208);
+    font-family: gotham-light;
 }
 
 nav {
@@ -12,6 +21,7 @@ nav {
     height: 80px;
     justify-content: space-around;
     align-items: center;
+    color: rgb(232,156,44);
 }
 
 .logo {
@@ -21,6 +31,11 @@ nav {
 ul {
     display: flex;
     justify-content: center;
+    align-items: flex-end;
+}
+
+footer * a {
+    color: white;
 }
 
 li {
@@ -30,59 +45,123 @@ li {
 
 a {
     text-decoration: none;
+    color: rgb(232,156,44)
+}
+p{
+    font-weight: 300;
+    font-style: normal;
+    font-size: 14px;
+    letter-spacing: .03em;
+    line-height: 1.8em;
+    text-transform: none;
+    color: rgba(0,0,0,.7);
+}
+
+h1 {
+    display: inline;
+    font-weight: 800;
+    font-style: normal;
+    font-size: 8vw;
+    letter-spacing: -.05em;
+    line-height: .8em;
+    margin: 18px 0;
+}
+
+h2 {
+    font-weight: 400;
+    font-style: normal;
+    font-size: 39px;
+    letter-spacing: -.02em;
+    line-height: 1em;
+    text-transform: none;
+    color: #281a17;
+}
+
+h3 {
+    font-weight: 400;
+    font-style: normal;
+    font-size: 15px;
+    letter-spacing: .01em;
+    line-height: 1.8em;
+    text-transform: uppercase;
+    color: rgba(40,26,23,.8);
+}
+
+.white {
     color: white;
 }
 
 section {
     display: flex;
-    min-height: 400px;
-    padding: 20px 100px;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+    padding: 75px 175px;
 }
-section div {
-    margin: 50px;
+
+section:nth-of-type(1), section:nth-of-type(3), section:nth-of-type(5) {
+    flex-direction: column;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    height: 70vh;
+    align-items: flex-start;
+}
+
+section:nth-of-type(2), section:nth-of-type(4) {
+    background-color:white;
+    font-weight: 300;
+    font-style: normal;
+    font-size: 14px;
+    letter-spacing: .03em;
+    line-height: 1.8em;
+    text-transform: none;
+    color: rgba(0,0,0,.7);
 }
 
 section:nth-of-type(1) {
-    flex-direction: column;
     background-image: url(./images/headerphoto.jpg);
-    background-size: cover;
-    background-attachment: fixed;
-}
-
-section:nth-of-type(2) {
-    background-color:white;
-    color: black;
-
 }
 
 section:nth-of-type(3) {
     background-image: url(./images/pexels-ali-pazani-2787341.jpg);
-    background-size: cover;
-    background-attachment: fixed;
-}
-
-section:nth-of-type(4) {
-    background-color:white;
-    color: black;
+    background-position: top;
 }
 
 section:nth-of-type(5) {
     flex-direction: column;
     background-image: url(./images/adam-winger-WXmHwPcFamo-unsplash.jpg);
-    background-size: cover;
-    background-attachment: fixed;
+    align-items: center;
 }
 
 section:nth-of-type(6) {
     flex-direction: column;
+    height: fit-content;
     background-color:rgb(216,192,208);
     color: white;
+    justify-content: center;
+    
+}
+
+div {
+    margin: 0 20px;
+    min-height: inherit;
+    min-width: 30vw;
+    max-width: 100vw;
 }
 
 ul img {
     width: 1em;
     height: auto;
     padding: 5px;
+}
+
+button {
+    border: 2px solid rgb(232,156,44);
+    color: rgb(232,156,44);
+    background-color: transparent;
+}
+
+button:hover {
+    background-color: rgb(232,156,44);
+    color: white;
 }
