--- a/styles.css
+++ b/styles.css
@@ -1,94 +1,6 @@
-
-@font-face {
-    font-family: gotham-light;
-    src: url(./Gotham-Font/Gotham-Light.otf) url(./Gotham-Font/GothamLight.ttf);
-}
-
-@font-face {
-    font-family: gotham-black;
-    src: url(./Gotham-Font/Gotham-Black.otf) url(./Gotham-Font/GothamBold.ttf);
-}
-
-body {
-    margin: auto;
-    color: white;
-    background-color: rgb(216,192,208);
-    font-family: gotham-light;
-}
-
-nav {
-    display: flex;
-    height: 80px;
-    justify-content: space-around;
-    align-items: center;
-    color: rgb(232,156,44);
-}
-
-.logo {
-    width: 60px;
+header {
     height: 60px;
-}
-ul {
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-}
-
-footer * a {
-    color: white;
-}
-
-li {
-    list-style-type: none;
-    padding: 10px;
-}
-
-a {
-    text-decoration: none;
-    color: rgb(232,156,44)
-}
-p{
-    font-weight: 300;
-    font-style: normal;
-    font-size: 14px;
-    letter-spacing: .03em;
-    line-height: 1.8em;
-    text-transform: none;
-    color: rgba(0,0,0,.7);
-}
-
-h1 {
-    display: inline;
-    font-weight: 800;
-    font-style: normal;
-    font-size: 8vw;
-    letter-spacing: -.05em;
-    line-height: .8em;
-    margin: 18px 0;
-}
-
-h2 {
-    font-weight: 400;
-    font-style: normal;
-    font-size: 39px;
-    letter-spacing: -.02em;
-    line-height: 1em;
-    text-transform: none;
-    color: #281a17;
-}
-
-h3 {
-    font-weight: 400;
-    font-style: normal;
-    font-size: 15px;
-    letter-spacing: .01em;
-    line-height: 1.8em;
-    text-transform: uppercase;
-    color: rgba(40,26,23,.8);
-}
-
-.white {
-    color: white;
+    background-image: url(./images/headerphoto.jpg);
 }
 
 section {
@@ -123,7 +35,7 @@ section:nth-of-type(1) {
 }
 
 section:nth-of-type(3) {
-    background-image: url(./images/pexels-ali-pazani-2787341.jpg);
+    background-image: url(./images/gallery-pexels-ali-pazani-2787341.jpg);
     background-position: top;
 }
 
@@ -142,11 +54,16 @@ section:nth-of-type(6) {
     
 }
 
-div {
+section > div {
     margin: 0 20px;
     min-height: inherit;
     min-width: 30vw;
     max-width: 100vw;
+}
+
+.centered {
+    line-height: 2em;
+    text-align: center;
 }
 
 ul img {
@@ -158,10 +75,57 @@ ul img {
 button {
     border: 2px solid rgb(232,156,44);
     color: rgb(232,156,44);
+    letter-spacing: .2em;
     background-color: transparent;
+    padding: 10px 30px;
 }
 
 button:hover {
     background-color: rgb(232,156,44);
     color: white;
+}
+
+@media (max-width: 800px) {
+    section {
+        padding: 10px;
+    }
+    section:nth-of-type(2), section:nth-of-type(4) {
+        flex-direction: column;
+    }
+    section:nth-of-type(1), section:nth-of-type(3) {
+        justify-content: end;
+    }
+    .welcome {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    h1 {
+        font-size: 11vw;
+    }
+    .white {
+        font-size: 4vw;
+    }
+}
+
+@media (max-width: 1000px) {
+    section:nth-of-type(2), section:nth-of-type(4) {
+        flex-direction: column;
+    }
+
+}
+
+@media (max-width: 500px) {
+    section:nth-of-type(1), section:nth-of-type(3) {
+        justify-content: end;
+    }
+    .welcome {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    h1 {
+        font-size: 11vw;
+    }
+    .white {
+        font-size: 4vw;
+    }
 }
