--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ section:nth-of-type(2), section:nth-of-type(4) {
 
 section:nth-of-type(1) {
     background-image: url(./images/headerphoto.jpg);
+        background-position: top;
 }
 
 section:nth-of-type(3) {
@@ -43,15 +44,6 @@ section:nth-of-type(5) {
     flex-direction: column;
     background-image: url(./images/adam-winger-WXmHwPcFamo-unsplash.jpg);
     align-items: center;
-}
-
-section:nth-of-type(6) {
-    flex-direction: column;
-    height: fit-content;
-    background-color:rgb(216,192,208);
-    color: white;
-    justify-content: center;
-    
 }
 
 section > div {
@@ -72,22 +64,15 @@ ul img {
     padding: 5px;
 }
 
-button {
-    border: 2px solid rgb(232,156,44);
-    color: rgb(232,156,44);
-    letter-spacing: .2em;
-    background-color: transparent;
-    padding: 10px 30px;
-}
-
-button:hover {
+.button:hover {
     background-color: rgb(232,156,44);
     color: white;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 1000px) {
     section {
         padding: 10px;
+        padding-bottom: 40px;
     }
     section:nth-of-type(2), section:nth-of-type(4) {
         flex-direction: column;
@@ -99,19 +84,6 @@ button:hover {
         display: flex;
         flex-direction: column-reverse;
     }
-    h1 {
-        font-size: 11vw;
-    }
-    .white {
-        font-size: 4vw;
-    }
-}
-
-@media (max-width: 1000px) {
-    section:nth-of-type(2), section:nth-of-type(4) {
-        flex-direction: column;
-    }
-
 }
 
 @media (max-width: 500px) {
@@ -123,9 +95,6 @@ button:hover {
         flex-direction: column-reverse;
     }
     h1 {
-        font-size: 11vw;
-    }
-    .white {
-        font-size: 4vw;
+        font-size: 3em;
     }
 }
