--- a/styles/site-styles.css
+++ b/styles/site-styles.css
@@ -33,25 +33,30 @@ nav {
     display: flex;
     font-size: 1em;
     justify-content: space-between;
+    align-items: center;
+}
+
+nav > a {
+    font: 1em;
+    padding: 10px;
+    margin: 10px;
 }
 
 a {
-    font: 1em;
-    padding: 20px;
+    text-decoration: none;
+    color: rgb(232,156,44);
+    cursor: pointer;
 }
 
 .logo {
     width: 60px;
-    height: 60px;
 }
 ul {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: flex-end;
-}
-
-footer * a {
-    color: white;
+    padding: 0;
 }
 
 li {
@@ -59,10 +64,6 @@ li {
     padding: 10px;
 }
 
-a {
-    text-decoration: none;
-    color: rgb(232,156,44)
-}
 p{
     font-weight: 300;
     font-style: normal;
@@ -74,7 +75,6 @@ p{
 }
 
 h1 {
-    display: inline;
     font-weight: 800;
     font-style: normal;
     font-size: 8vw;
@@ -86,7 +86,7 @@ h1 {
 h2 {
     font-weight: 400;
     font-style: normal;
-    font-size: 39px;
+    font-size: 2em;
     letter-spacing: -.02em;
     line-height: 1em;
     text-transform: none;
@@ -96,7 +96,7 @@ h2 {
 h3 {
     font-weight: 400;
     font-style: normal;
-    font-size: 15px;
+    font-size: 1.5em;
     letter-spacing: .01em;
     line-height: 1.8em;
     text-transform: uppercase;
@@ -105,6 +105,7 @@ h3 {
 
 .white {
     color: white;
+    margin: 10px;
 }
 
 section {
@@ -112,6 +113,7 @@ section {
     justify-content: center;
     align-items: center;
     background-color: white;
+    padding: 75px 175px;
 }
 
 ul img {
@@ -124,7 +126,41 @@ hr {
     display: block;
     width: 60vw;
     border-color: rgb(232,156,44);
-    margin: 30px 0;
+    margin: 2em auto;
+}
+
+.button {
+    display: inline-block;
+    border: 2px solid rgb(232,156,44);
+    color: rgb(232,156,44);
+    letter-spacing: .2em;
+    background-color: transparent;
+    padding: 20px 30px 10px;
+    transition: 300ms ease-in;
+    margin-top: 15px;
+}
+
+.button:hover {
+    background-color: rgb(232,156,44);
+    color: white;
+}
+
+footer {
+    display: flex;
+    grid-gap: 10vh;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    margin: 75px 100px;
+}
+
+footer > div {
+    background-color:rgb(216,192,208);
+    color: white;  
+}
+
+footer * a {
+    color: white;
 }
 
 @media (max-width: 1000px) {
@@ -132,8 +168,12 @@ hr {
         height: 60px;
         padding: 30px;
     }
+    nav {
+        flex-wrap: wrap;
+        justify-content: space-around;
+      }
     section {
-        padding: 3vw;
+        padding: 4vw;
     }
     article {
         flex-direction: column;
@@ -151,14 +191,27 @@ hr {
       padding: 20px;
   }
   nav {
-      flex-wrap: wrap;
+    flex-wrap: wrap;
     justify-content: space-around;
   }
   article {
       flex-direction: column;
   }
 
-  h2 {
-      font-size: 6vw;
+  section {
+      padding-bottom: 40px;
   }
+
+  h2 {
+      font-size: 2em;
+  }
+
+  h3 {
+      font-size: 1em;
+  }
+
+  footer {
+      margin: 3vw;
+  }
+
 }
